--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -4,27 +4,47 @@
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+  <group android:scaleX="4.1175"
+      android:scaleY="4.1175"
+      android:translateX="21.06"
+      android:translateY="21.06">
+      <path
+          android:pathData="M6.0769457 7.284212L5.8348246 8H5.2169981L6.253388 5.2169981H6.9680629L8 8H7.3504474L7.1083262 7.284212ZM6.9864307 6.8745541L6.6084991 5.7491081H6.5812257L6.203294 6.8745541h0.7836933z">
+          <aapt:attr
+              name="android:fillColor">
+              <gradient
+                  android:startX="3.547197"
+                  android:startY="8"
+                  android:endX="12.4528"
+                  android:endY="8"
+                  android:tileMode="clamp">
+                  <item
+                      android:color="#4D002E"
+                      android:offset="0" />
+                  <item
+                      android:color="#9E4D002E"
+                      android:offset="1" />
+              </gradient>
+          </aapt:attr>
+      </path>
+      <path
+          android:pathData="M3.547197 4.6603978A1.1132008 1.1132008 0 0 1 4.6603978 3.547197h3.8962026a1.1132008 1.1132008 0 0 1 1.1132008 1.1132008v1.6698011h1.6698008a1.1132008 1.1132008 0 0 1 1.113201 1.1132008v3.8962023a1.1132008 1.1132008 0 0 1 -1.113201 1.113201H7.4433997A1.1132008 1.1132008 0 0 1 6.3301989 11.339602V9.6698012H4.6603978A1.1132008 1.1132008 0 0 1 3.547197 8.5566004ZM4.6603978 4.1037974A0.55660038 0.55660038 0 0 0 4.1037974 4.6603978V8.5566004A0.55660038 0.55660038 0 0 0 4.6603978 9.1132008H8.5566004A0.55660038 0.55660038 0 0 0 9.1132008 8.5566004V4.6603978A0.55660038 0.55660038 0 0 0 8.5566004 4.1037974Zm3.9730135 5.5632208c0.1074238 0.1675367 0.2237533 0.324498 0.3506582 0.4708838 -0.4163371 0.320045 -0.9311924 0.557157 -1.5406698 0.719128 0.099075 0.120782 0.2510267 0.353441 0.3089132 0.482572 0.6261754 -0.199819 1.1577288 -0.46977 1.6063487 -0.831561 0.4324785 0.37014 0.9679284 0.64844 1.6308394 0.819316 0.07403 -0.141376 0.230432 -0.374592 0.350101 -0.495374C10.713427 10.691163 10.194675 10.445702 9.7699892 10.117308 10.149034 9.7015274 10.450155 9.1983607 10.672238 8.5827606h0.667364V8H9.6698012V8.5827606H10.0956C9.9186015 9.0525314 9.6837162 9.4432648 9.3876048 9.7683194A3.3763379 3.3763379 0 0 1 9.1566156 9.4944721 1.1065216 1.1065216 0 0 1 8.6334113 9.6670182Z">
+          <aapt:attr
+              name="android:fillColor">
+              <gradient
+                  android:startX="3.547197"
+                  android:startY="8"
+                  android:endX="12.4528"
+                  android:endY="8"
+                  android:tileMode="clamp">
+                  <item
+                      android:color="#4D002E"
+                      android:offset="0" />
+                  <item
+                      android:color="#9E4D002E"
+                      android:offset="1" />
+              </gradient>
+          </aapt:attr>
+      </path>
+  </group>
 </vector>
