--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -4,47 +4,37 @@
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
-  <group android:scaleX="4.1175"
-      android:scaleY="4.1175"
-      android:translateX="21.06"
-      android:translateY="21.06">
-      <path
-          android:pathData="M6.0769457 7.284212L5.8348246 8H5.2169981L6.253388 5.2169981H6.9680629L8 8H7.3504474L7.1083262 7.284212ZM6.9864307 6.8745541L6.6084991 5.7491081H6.5812257L6.203294 6.8745541h0.7836933z">
-          <aapt:attr
-              name="android:fillColor">
-              <gradient
-                  android:startX="3.547197"
-                  android:startY="8"
-                  android:endX="12.4528"
-                  android:endY="8"
-                  android:tileMode="clamp">
-                  <item
-                      android:color="#4D002E"
-                      android:offset="0" />
-                  <item
-                      android:color="#9E4D002E"
-                      android:offset="1" />
-              </gradient>
-          </aapt:attr>
-      </path>
-      <path
-          android:pathData="M3.547197 4.6603978A1.1132008 1.1132008 0 0 1 4.6603978 3.547197h3.8962026a1.1132008 1.1132008 0 0 1 1.1132008 1.1132008v1.6698011h1.6698008a1.1132008 1.1132008 0 0 1 1.113201 1.1132008v3.8962023a1.1132008 1.1132008 0 0 1 -1.113201 1.113201H7.4433997A1.1132008 1.1132008 0 0 1 6.3301989 11.339602V9.6698012H4.6603978A1.1132008 1.1132008 0 0 1 3.547197 8.5566004ZM4.6603978 4.1037974A0.55660038 0.55660038 0 0 0 4.1037974 4.6603978V8.5566004A0.55660038 0.55660038 0 0 0 4.6603978 9.1132008H8.5566004A0.55660038 0.55660038 0 0 0 9.1132008 8.5566004V4.6603978A0.55660038 0.55660038 0 0 0 8.5566004 4.1037974Zm3.9730135 5.5632208c0.1074238 0.1675367 0.2237533 0.324498 0.3506582 0.4708838 -0.4163371 0.320045 -0.9311924 0.557157 -1.5406698 0.719128 0.099075 0.120782 0.2510267 0.353441 0.3089132 0.482572 0.6261754 -0.199819 1.1577288 -0.46977 1.6063487 -0.831561 0.4324785 0.37014 0.9679284 0.64844 1.6308394 0.819316 0.07403 -0.141376 0.230432 -0.374592 0.350101 -0.495374C10.713427 10.691163 10.194675 10.445702 9.7699892 10.117308 10.149034 9.7015274 10.450155 9.1983607 10.672238 8.5827606h0.667364V8H9.6698012V8.5827606H10.0956C9.9186015 9.0525314 9.6837162 9.4432648 9.3876048 9.7683194A3.3763379 3.3763379 0 0 1 9.1566156 9.4944721 1.1065216 1.1065216 0 0 1 8.6334113 9.6670182Z">
-          <aapt:attr
-              name="android:fillColor">
-              <gradient
-                  android:startX="3.547197"
-                  android:startY="8"
-                  android:endX="12.4528"
-                  android:endY="8"
-                  android:tileMode="clamp">
-                  <item
-                      android:color="#4D002E"
-                      android:offset="0" />
-                  <item
-                      android:color="#9E4D002E"
-                      android:offset="1" />
-              </gradient>
-          </aapt:attr>
-      </path>
+  <group android:scaleX="4.08375"
+      android:scaleY="4.08375"
+      android:translateX="21.33"
+      android:translateY="21.33">
+    <path
+        android:pathData="m6.077,7.284 l-0.242,0.716h-0.618l1.036,-2.783h0.715l1.032,2.783h-0.65l-0.242,-0.716zM6.986,6.875 L6.608,5.749h-0.027l-0.378,1.125h0.784z">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startX="3.547"
+            android:startY="8"
+            android:endX="12.453"
+            android:endY="8"
+            android:type="linear">
+          <item android:offset="0" android:color="#FF7845CF"/>
+          <item android:offset="1" android:color="#FFC3E7FF"/>
+        </gradient>
+      </aapt:attr>
+    </path>
+    <path
+        android:pathData="m3.547,4.66a1.113,1.113 0,0 1,1.113 -1.113h3.896a1.113,1.113 0,0 1,1.113 1.113v1.67h1.67a1.113,1.113 0,0 1,1.113 1.113v3.896a1.113,1.113 0,0 1,-1.113 1.113h-3.896a1.113,1.113 0,0 1,-1.113 -1.113v-1.67h-1.67a1.113,1.113 0,0 1,-1.113 -1.113zM4.66,4.104a0.557,0.557 0,0 0,-0.557 0.557v3.896a0.557,0.557 0,0 0,0.557 0.557h3.896a0.557,0.557 0,0 0,0.557 -0.557v-3.896a0.557,0.557 0,0 0,-0.557 -0.557zM8.633,9.667c0.107,0.168 0.224,0.324 0.351,0.471 -0.416,0.32 -0.931,0.557 -1.541,0.719 0.099,0.121 0.251,0.353 0.309,0.483 0.626,-0.2 1.158,-0.47 1.606,-0.832 0.432,0.37 0.968,0.648 1.631,0.819 0.074,-0.141 0.23,-0.375 0.35,-0.495 -0.626,-0.141 -1.145,-0.386 -1.57,-0.715 0.379,-0.416 0.68,-0.919 0.902,-1.535h0.667v-0.583h-1.67v0.583h0.426c-0.177,0.47 -0.412,0.86 -0.708,1.186a3.376,3.376 0,0 1,-0.231 -0.274,1.107 1.107,0 0,1 -0.523,0.173z">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startX="3.547"
+            android:startY="8"
+            android:endX="12.453"
+            android:endY="8"
+            android:type="linear">
+          <item android:offset="0" android:color="#FF7845CF"/>
+          <item android:offset="1" android:color="#FFC3E7FF"/>
+        </gradient>
+      </aapt:attr>
+    </path>
   </group>
 </vector>
